# nave

./: .gitignore  Cargo.toml  README.md
acir_checker/: Cargo.toml  README.md  test_report.txt  test_report_new.txt  test_report_rlimit1.txt  test_report_rlimit2.txt  test_report_rtlimit1.txt  test_report_verbose.txt
acir_checker/benches/: BENCHMARK.md  benchmark.sh  comparison.py
acir_checker/benches/BASE/: aaa.json  arithmetic_binary_operations.json  pnf_11_simple_program_addition.json  pnf_12_type_aliases.json  pnf_1_array_neq.json  pnf_6_nested_arrays_from_brillig.json  pnf_9_regression_4088.json  pnv_10_slice_coercion.json  pnv_12_wildcard_type.json  pnv_2_assign_ex.json  pnv_3_cast_bool.json  pnv_4_assert_message.json  pnv_6_global_consts.json  pnv_7_higher_order_functions.json  pnv_8_modulus.json  prf_10_a_1_mul.json  prf_11_a_3_add.json  prf_2_brillig_calls_array.json  prf_6_function_ref.json  prf_7_regression_7451.json  prf_8_simple_radix.json  prv_10_to_bytes_integration.json  prv_11_u16_support.json  prv_12_regression_3607.json  prv_14_regression_8329.json  prv_3_array_len.json  prv_6_cast_signed_to_u1.json  prv_7_conditional_2.json
acir_checker/benches/COMP/: pnf_10_regression_7195.json  pnf_13_unrolling_regression_8333.json  pnf_2_brillig_conditional.json  pnf_4_import.json  pnf_5_lambda_from_global_array.json  pnf_7_no_predicates_basic.json  pnf_8_pedersen_hash.json  pnv_11_tuples.json  pnv_1_assert_statement.json  pnv_5_conditional_regression_547.json  pnv_9_pred_eq.json  prf_1_array_oob_regression_7975.json  prf_3_brillig_nested_arrays.json  prf_4_brillig_not.json  prf_5_dont_deduplicate_call.json  prf_9_struct_inputs.json  prv_13_regression_6451.json  prv_1_a_2_div.json  prv_2_a_7_function.json  prv_4_bool_or.json  prv_5_brillig_calls_conditionals.json  prv_8_global_var_regression_simple.json  prv_9_regression_7062.json
acir_checker/docker/: Dockerfile
acir_checker/scripts/: prove_and_verify.sh
acir_checker/src/: encoder.rs  error.rs  lib.rs  smt.rs
acir_checker/test_programs/: README.md
acir_checker/test_programs/benches/arithmetic_binary_operations/src/: main.nr
acir_checker/test_programs/benches/pnf_10_regression_7195/src/: main.nr
acir_checker/test_programs/benches/pnf_11_simple_program_addition/src/: main.nr
acir_checker/test_programs/benches/pnf_12_type_aliases/src/: main.nr
acir_checker/test_programs/benches/pnf_13_unrolling_regression_8333/src/: main.nr
acir_checker/test_programs/benches/pnf_1_array_neq/src/: main.nr
acir_checker/test_programs/benches/pnf_2_brillig_conditional/src/: main.nr
acir_checker/test_programs/benches/pnf_3_debug_logs/src/: main.nr
acir_checker/test_programs/benches/pnf_4_import/src/: import.nr  main.nr
acir_checker/test_programs/benches/pnf_5_lambda_from_global_array/src/: main.nr
acir_checker/test_programs/benches/pnf_6_nested_arrays_from_brillig/src/: main.nr
acir_checker/test_programs/benches/pnf_7_no_predicates_basic/src/: main.nr
acir_checker/test_programs/benches/pnf_8_pedersen_hash/src/: main.nr
acir_checker/test_programs/benches/pnf_9_regression_4088/src/: main.nr
acir_checker/test_programs/benches/pnv_10_slice_coercion/src/: main.nr
acir_checker/test_programs/benches/pnv_11_tuples/src/: main.nr
acir_checker/test_programs/benches/pnv_12_wildcard_type/src/: main.nr
acir_checker/test_programs/benches/pnv_1_assert_statement/src/: main.nr
acir_checker/test_programs/benches/pnv_2_assign_ex/src/: main.nr
acir_checker/test_programs/benches/pnv_3_cast_bool/src/: main.nr
acir_checker/test_programs/benches/pnv_4_assert_message/src/: main.nr
acir_checker/test_programs/benches/pnv_5_conditional_regression_547/src/: main.nr
acir_checker/test_programs/benches/pnv_6_global_consts/src/: baz.nr  foo.nr  main.nr
acir_checker/test_programs/benches/pnv_7_higher_order_functions/src/: main.nr
acir_checker/test_programs/benches/pnv_8_modulus/src/: main.nr
acir_checker/test_programs/benches/pnv_9_pred_eq/src/: main.nr
acir_checker/test_programs/benches/prf_10_a_1_mul/src/: main.nr
acir_checker/test_programs/benches/prf_11_a_3_add/src/: main.nr
acir_checker/test_programs/benches/prf_1_array_oob_regression_7975/src/: main.nr
acir_checker/test_programs/benches/prf_2_brillig_calls_array/src/: main.nr
acir_checker/test_programs/benches/prf_3_brillig_nested_arrays/src/: main.nr
acir_checker/test_programs/benches/prf_4_brillig_not/src/: main.nr
acir_checker/test_programs/benches/prf_5_dont_deduplicate_call/src/: main.nr
acir_checker/test_programs/benches/prf_6_function_ref/src/: main.nr
acir_checker/test_programs/benches/prf_7_regression_7451/src/: main.nr
acir_checker/test_programs/benches/prf_8_simple_radix/src/: main.nr
acir_checker/test_programs/benches/prf_9_struct_inputs/src/: foo.nr  main.nr
acir_checker/test_programs/benches/prv_10_to_bytes_integration/src/: main.nr
acir_checker/test_programs/benches/prv_11_u16_support/src/: main.nr
acir_checker/test_programs/benches/prv_12_regression_3607/src/: main.nr
acir_checker/test_programs/benches/prv_14_regression_8329/src/: main.nr
acir_checker/test_programs/benches/prv_1_a_2_div/src/: main.nr
acir_checker/test_programs/benches/prv_2_a_7_function/src/: main.nr
acir_checker/test_programs/benches/prv_3_array_len/src/: main.nr
acir_checker/test_programs/benches/prv_4_bool_or/src/: main.nr
acir_checker/test_programs/execution_success/arithmetic_binary_operations/: bench.csv  bench.json  bench_timeout.json
acir_checker/test_programs/execution_success/nested_array_in_vector/: output  output.txt  path_to_smt2_log.smt2
acir_checker/tests/: TEST.md  failure.rs  helper.rs  success.rs  test_falsified.rs  test_verified.rs
nave_cli/: Cargo.toml  build.rs
nave_cli/src/: errors.rs  main.rs
nave_cli/src/cli/: fv_cmd.rs  mod.rs
(+68 files in other folders)
