[package]
name = "nave_cli"
description = "NAVe: Nargo program formal verifier"
default-run = "nave"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

# Rename binary from `nave_cli` to `nave`
[[bin]]
name = "nave"
path = "src/main.rs"
doc = false # Avoid conflicts with the `nave` library when documenting. We just want to document the `nave` library.

[build-dependencies]
build-data = "^0.3.3"

[dependencies]
clap = { version = "4.3.19", features = ["derive", "env"] }
fm = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" }
nargo = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" , features = ["rpc"] }
nargo_cli = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" }
# nargo_expand.workspace = true
# nargo_fmt.workspace = true
nargo_toml = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" }
# noir_lsp.workspace = true
noir_artifact_cli = {git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22"  }
# noir_debugger = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22"  }
# noirc_evaluator.workspace = true
noirc_driver = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" , features = ["bn254"] }
noirc_frontend = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" , features = ["bn254"] }
noirc_abi = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" }
noirc_errors = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" }
noirc_artifacts = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" }
# noirc_artifacts_info = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" }
# noir_ast_fuzzer.workspace = true
acvm = { git = "https://github.com/blockhouse-sec/noir.git", tag = "nave-v1.0.0-beta.22" , features = ["bn254"] }
acir_checker.workspace = true
thiserror = "1.0.21"
const_format = "0.2.36"
termcolor = "1.1.2"
color-eyre = "0.6.2"
# clap-markdown = { git = "https://github.com/noir-lang/clap-markdown", rev = "450d759532c88f0dba70891ceecdbc9ff8f25d2b", optional = true }

# Logs
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
fs2 = "0.4.3"

